style.css
body {
  background-color: rgb(0, 0, 0);
  margin: 0;
}

#title {
  text-align: center;
  color: white;
  margin-bottom: 50px;
}

.calculator-body {
  display: flex;
  flex-direction: column;
  background-color: rgb(0, 0, 0);
  width: 500px;
  height: 700px;
  border-radius: 15px;
  margin: 6vh auto;
  border: 2px solid rgb(255, 255, 255);
}

.screen {
  height: 200px;
  margin: 15px;
  background-color: rgb(175, 84, 255);
  border-radius: 10px;
  display: flex;
  flex-direction: column-reverse;
  align-items: flex-end;
  padding: 20px;
  padding-bottom: 10px;
  font-size: 50px;
  color: white;
}
.buttons {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  margin: 15px;
}

button {
  width: 110px;
  height: 110px;
  font-size: 30px;
  border-radius: 50%;
  border: 2px solid white;
  background-color: rgb(0, 0, 0);
  font-size: 40px;
  color: white;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

button:hover {
  background-color: rgb(160, 160, 255);
  transition-duration: 0.3s;
  opacity: 50%;
}

.clear {
  font-size: 30px;
  /* background-color:rgb(50, 0, 0); */
}

.footer {
  color: white;
  position: absolute;
  width: 100vw;
  text-align: center;
  bottom: 0;
  margin-bottom: 5px;
  opacity: 40%;
}

a {
  color: rgb(170, 0, 255);
}

a:link {
  text-decoration: none;
  color: violet;
}

